--- a/src/app/features/products/components/variant-value-details/variant-value-details.component.html
+++ b/src/app/features/products/components/variant-value-details/variant-value-details.component.html
@@ -1,215 +1,4 @@
-<!-- <div class="row g-2">
-  <div class="col-lg-4">
-          <app-input
-             (input)="recalculate()"
-            [InputComponentData]="{
-                type: 'text',
-                id: 'price',
-                label: '',
-                spanLabel: 'SAR',
-                placeholder: 'Price',
-                vertCLass: 'col-12',
-                readonly: false,
-                hideLabel: true,
-                inputGroup: true,
-                clickMessage: '',
-                errorMessage: '',
-                enableFocusBlurTracking: false,
-              }"
-          #inputRef
-        >
-          <i class="fa-solid fa-money-bill-1-wave"></i>
-        </app-input>
-  </div>
-  <div class="col-lg-4">
-        <app-input
-             (input)="recalculate()"
-            [InputComponentData]="{
-                type: 'text',
-                id: 'costPerItem',
-                label: '',
-                spanLabel: 'SAR',
-                placeholder: 'Cost Price',
-                vertCLass: 'col-12',
-                readonly: false,
-                hideLabel: true,
-                inputGroup: true,
-                clickMessage: '',
-                errorMessage: '',
-                enableFocusBlurTracking: false,
-              }"
-          #inputRef
-        >
-          <i class="fa-solid fa-money-bill-1-wave"></i>
-        </app-input>
-  </div>
-  <div class=" col-lg-4">
-          <app-input
-             [InputComponentData]="{
-                type: 'text',
-                id: 'comparePrice',
-                label: '',
-                spanLabel: 'SAR',
-                placeholder: 'Compare Price',
-                vertCLass: 'col-12',
-                readonly: false,
-                hideLabel: true,
-                inputGroup: true,
-                clickMessage: '',
-                errorMessage: '',
-                enableFocusBlurTracking: false,
-              }"
-          #inputRef
-        >
-          <i class="fa-solid fa-money-bill-1-wave"></i>
-        </app-input>
-  </div>
-  <div class="col-lg-4">
-        <app-input
-            [InputComponentData]="{
-                type: 'text',
-                id: 'profit',
-                label: '',
-                spanLabel: 'SAR',
-                placeholder: 'Profit',
-                vertCLass: 'col-12',
-                readonly: false,
-                hideLabel: true,
-                inputGroup: true,
-                clickMessage: '',
-                errorMessage: '',
-                enableFocusBlurTracking: false,
-              }"
-          #inputRef
-        >
-          <i class="fa-solid fa-money-bill-1-wave"></i>
-        </app-input>
-  </div>
-  <div class=" col-lg-4">
-          <app-input
-             [InputComponentData]="{
-                type: 'text',
-                id: 'margin',
-                label: '',
-                spanLabel: '%',
-                placeholder: 'Margin',
-                vertCLass: 'col-12',
-                readonly: false,
-                hideLabel: true,
-                inputGroup: true,
-                clickMessage: '',
-                errorMessage: '',
-                enableFocusBlurTracking: false,
-              }"
-          #inputRef
-        >
-          <i class="fa-solid fa-money-bill-1-wave"></i>
-        </app-input>
-  </div>
-   <div class=" col-lg-4">
-          <app-input
-             [InputComponentData]="{
-                type: 'text',
-                id: 'vatValue',
-                label: '',
-                spanLabel: 'SAR',
-                placeholder: 'Vat Value',
-                vertCLass: 'col-12',
-                readonly: false,
-                hideLabel: true,
-                inputGroup: true,
-                clickMessage: '',
-                errorMessage: '',
-                enableFocusBlurTracking: false,
-              }"
-          #inputRef
-        >
-          <i class="fa-solid fa-money-bill-1-wave"></i>
-        </app-input>
-  </div>
-  <div class="col-lg-6">
-                <app-input
-                    [InputComponentData]="{
-                type: 'text',
-                id: 'barcode',
-                label: 'Barcode',
-                spanLabel: '',
-                placeholder: 'Barcode',
-                vertCLass: 'col-12',
-                readonly: false,
-                hideLabel: true,
-                inputGroup: false,
-                clickMessage: '',
-                errorMessage: '',
-                enableFocusBlurTracking: false,
-              }"
-          #inputRef
-        >
-         <i class="fa-solid fa-barcode"></i>
-        </app-input>
-  </div>
-  <div class="col-lg-6">
-                <app-input
-                    [InputComponentData]="{
-                type: 'text',
-                id: 'sku',
-                label: '',
-                spanLabel: '',
-                placeholder: 'SkU',
-                vertCLass: 'col-12',
-                readonly: false,
-                hideLabel: true,
-                inputGroup: false,
-                clickMessage: '',
-                errorMessage: '',
-                enableFocusBlurTracking: false,
-              }"
-          #inputRef
-        >
-         <i class="fa-solid fa-barcode"></i>
-        </app-input>
-  </div>
-  <div class="col-lg-6">
-                 <app-dropdown
-            [DropdownComponentData]="{
-                  title:'charge Tax',
-                  dropdownSelection:chargeTaxDropDownSelection,
-                  optionsArray:ChargeTax,
-                  key:'title',
-                  noBorder:false
-            }"
-          (changeSelect)="changeSelect($event,'chargeTax')"
-          >
-        </app-dropdown>
-  </div>
-  <div class="col-lg-6">
-                  <app-dropdown
-            [DropdownComponentData]="{
-                  title:'Price Affecting',
-                  dropdownSelection:priceAffecringDropDownSelection,
-                  optionsArray:PriceAffecting,
-                  key:'title',
-                  noBorder:false
-            }"
-          (changeSelect)="changeSelect($event,'isPriceAffecting')"
-          >
-        </app-dropdown>
-
-  </div>
-  <div class="col-12">
-        <div class="pt-2 pb-1">
-          <h6 class="pb-1 border-bottom small ">{{'Quantity' | translate}}</h6>
-          <div class="d-flex align-items-center justify-content-between">
-            <span class="small">{{'Product Quantity' | translate}}</span>
-            <app-quantity-control [quantity]="VariantValueDetailsComponentData.quantity" (quantityChange)="updateQuantity($event)">
-            </app-quantity-control>
-          </div>
-        </div>
-       </div>
-</div> -->
-
-
-<div class="row g-2">
+<div class="row g-2 ">
   <ng-container *ngFor="let field of inputFields">
     <div [ngClass]="field.col">
       <app-input
@@ -263,9 +52,9 @@
 
   <div class="col-12">
     <div class="pt-2 pb-1">
-      <h6 class="pb-1 border-bottom small">{{ 'Quantity' | translate }}</h6>
+      <h6 class="pb-1 border-bottom small text-input">{{ 'Quantity' | translate }}</h6>
       <div class="d-flex align-items-center justify-content-between">
-        <span class="small">{{ 'Product Quantity' | translate }}</span>
+        <span class="small text-input">{{ 'Product Quantity' | translate }}</span>
         <app-quantity-control
           [quantity]="VariantValueDetailsComponentData.quantity"
           (quantityChange)="updateQuantity($event)"
