--- a/src/app/shared/components/generic-category-variant/generic-category-variant.component.html
+++ b/src/app/shared/components/generic-category-variant/generic-category-variant.component.html
@@ -8,7 +8,7 @@
   (doneChange)="create()"
   #popScreen
 >
-<div class="px-3 bg-white pb-3">
+<div class="px-3 bg-popscreen pb-3">
   <app-input
   [InputComponentData]="{
               type: 'text',
