--- a/src/app/shared/components/input/input.component.scss
+++ b/src/app/shared/components/input/input.component.scss
@@ -1,16 +1,15 @@
 @use 'variables' as *;
 
   .position-relative {
-  &:focus-within {
-    .input-icon{
-      color: $semi-dark !important;
-    }
-  }
+  // &:focus-within {
+  //   .input-icon{
+  //     color: $semi-dark !important;
+  //   }
+  // }
   .input-icon{
   inset-inline-start: 8px;
   inset-inline-end: auto;
   top:50%;
-  // color:#000;
   color:$input-text-color;
   font-size: .8rem;
   opacity: .4;
@@ -21,17 +20,9 @@
  input.form-control:focus + .input-group-text {
     border-color: $semi-dark;
   }
-   input.form-control:focus + .input-group-text {
-    border-color: $semi-dark;
+  input.form-control + .input-group-text {
+    border-color:$input-border-color ;
+    background-color: $input-group-text-bg-color ;
+    color:$input-text-color;
   }
-
-  // input.form-control{
-  //   background-color: $input-color !important;
-  //   color:$input-text-color !important;
-
-  //   &::placeholder {
-  //     color: $input-text-color !important;
-  //     opacity: 1; // Ensure full opacity (optional)
-  //   }
-  // }
 }
