--- a/src/app/shared/components/layout/layout.component.html
+++ b/src/app/shared/components/layout/layout.component.html
@@ -40,9 +40,9 @@
   </div>
 </div>
 
-<div class="filter-sidenav" [class.show]="isFilterVisible">
+<div class="filter-sidenav bg-filter" [class.show]="isFilterVisible">
   <div class="filter-header d-flex justify-content-between align-items-center px-3 py-2 border-bottom">
-    <h6 class="mb-0">{{ "Filter Options" | translate }}</h6>
+    <h6 class="mb-0 text-input small">{{ "Filter Options" | translate }}</h6>
     <button class="btn btn-sm btn-outline-danger" (click)="hideFilterOptions()">
       <i class="fa-solid fa-circle-xmark"></i>
     </button>
